[gd_scene load_steps=9 format=3 uid="uid://c36kupih0uhmn"]

[ext_resource type="Script" path="res://scripts/enemy_fish_kamikaze.gd" id="1_tx1g7"]
[ext_resource type="Texture2D" uid="uid://cbs3xa8um7t1l" path="res://assets/fish4.png" id="2_rp2ve"]

[sub_resource type="Animation" id="Animation_e8mtc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kvql5"]
resource_name = "boiling"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3mqqu"]
_data = {
"RESET": SubResource("Animation_e8mtc"),
"boiling": SubResource("Animation_kvql5")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_efmd1"]
radius = 11.0
height = 72.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_petc2"]
radius = 8.0
height = 40.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u6m5b"]
radius = 5.0
height = 16.0

[node name="EnemyFishKamikaze" type="Area2D" groups=["enemy"]]
script = ExtResource("1_tx1g7")
health = 6
score_value = 15
explosion_scale = 0.28
speed_variance = 40.0

[node name="EnemySprite" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_rp2ve")
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3mqqu")
}

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(-3, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_efmd1")

[node name="FinsCollision" type="CollisionShape2D" parent="."]
position = Vector2(5, 0)
shape = SubResource("CapsuleShape2D_petc2")

[node name="NoseCollision" type="CollisionShape2D" parent="."]
position = Vector2(35, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_u6m5b")

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
